# stlt-lottery-heatmap

./: .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  pb_mm_csv_link.py  pb_mm_tsv_page.py  pyproject.toml  requirements.txt
data/: Lottery_Powerball_Winning_Numbers__Beginning_2010.csv  export (1).xls  export.xls  mega_beginning_2002.json  power_beginning_2002.json  power_tx_html_roll.tsv
data/texas/: megamillions.csv  powerball.csv
src/llm_lottery_heatmap/: __init__.py
src/stlt_lottery_heatmap/: __init__.py
