[project]
name = "llm-lottery-heatmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.1",
    "numpy>=2.3.1",
    "streamlit>=1.46.1",
    "requests>=2.32.4",
    "plotly>=6.2.0",
    "beautifulsoup4>=4.13.4",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
